--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,4 +1,4 @@
-<!-- {{- if .IsNode -}}
+{{- if .IsNode -}}
 <script src="{{ "js/load-more.js" | absURL }}"></script>
 <script>
 (function() {
@@ -70,4 +70,4 @@
     });
 })();
 </script>
-{{- end -}} -->
+{{- end -}}
