--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,73 +1,3 @@
-<!-- {{- if .IsNode -}}
+{{- if .IsNode -}}
 <script src="{{ "js/load-more.js" | absURL }}"></script>
-<script>
-(function() {
-    const STORAGE_KEY_SCROLL = 'infiniteScroll_pos_' + location.pathname;
-    const STORAGE_KEY_HTML = 'infiniteScroll_html_' + location.pathname;
-    
-    console.log('[復元] スクリプト開始');
-    
-    // 復元処理
-    const savedScrollPos = sessionStorage.getItem(STORAGE_KEY_SCROLL);
-    const savedHTML = sessionStorage.getItem(STORAGE_KEY_HTML);
-    
-    if (savedScrollPos && savedHTML) {
-        const savedSizeKB = (new Blob([savedHTML]).size / 1024).toFixed(2);
-        console.log('[復元] 保存データあり');
-        console.log('[復元] 保存されたHTML容量:', savedSizeKB, 'KB');
-    }
-    
-    if (savedScrollPos && savedHTML && parseInt(savedScrollPos) > 0) {
-        const main = document.querySelector('.main');
-        
-        if (main) {
-            console.log('[復元] HTMLを復元します');
-            main.innerHTML = savedHTML;
-            
-            console.log('[復元] スクロール位置へ移動:', savedScrollPos);
-            setTimeout(() => {
-                window.scrollTo(0, parseInt(savedScrollPos));
-                sessionStorage.removeItem(STORAGE_KEY_SCROLL);
-                sessionStorage.removeItem(STORAGE_KEY_HTML);
-                console.log('[復元] 完了');
-            }, 100);
-        }
-    }
-    
-    // 保存処理
-    function saveScrollState() {
-        const scrollY = window.scrollY;
-        const main = document.querySelector('.main');
-        
-        if (scrollY > 100 && main) {
-            const htmlContent = main.innerHTML;
-            const htmlSize = new Blob([htmlContent]).size;
-            const htmlSizeKB = (htmlSize / 1024).toFixed(2);
-            
-            sessionStorage.setItem(STORAGE_KEY_SCROLL, scrollY);
-            sessionStorage.setItem(STORAGE_KEY_HTML, htmlContent);
-            
-            let totalSize = 0;
-            for (let key in sessionStorage) {
-                if (sessionStorage.hasOwnProperty(key)) {
-                    totalSize += sessionStorage[key].length + key.length;
-                }
-            }
-            const totalSizeKB = (totalSize / 1024).toFixed(2);
-            
-            console.log('[保存] スクロール:', scrollY);
-            console.log('[保存] HTML容量:', htmlSizeKB, 'KB');
-            console.log('[保存] sessionStorage全体:', totalSizeKB, 'KB / 約5120 KB');
-        }
-    }
-    
-    window.addEventListener('beforeunload', saveScrollState);
-    window.addEventListener('pagehide', saveScrollState);
-    window.addEventListener('visibilitychange', () => {
-        if (document.visibilityState === 'hidden') {
-            saveScrollState();
-        }
-    });
-})();
-</script>
-{{- end -}} -->
+{{- end -}}
